syntax = "proto3";

package proto;

option go_package = "/userpb";

service UserService{
    rpc AuthenticateUser(AuthenticateRequest) returns (AuthenticateResponse);
}

message AuthenticateRequest{
    string token = 1;
  }
  
message AuthenticateResponse{
  int64  status = 1; 
  string error = 2;
  User   user = 3;
}

message User {
  string 	id = 1;
  string 	username = 2;
  string 	email = 3;
}
  